--- a/nft/index.html
+++ b/nft/index.html
@@ -27,9 +27,9 @@ html,body {
 
 <p>&larr; <a href="index.html">Back to examples</a></p>
 
-<script async src="https://192.168.25.31:9090/build/artoolkit.min.js"></script>
-<script async src="https://192.168.25.31:9090/js/third_party/three.js/three.min.js"></script>
-<script async src="https://192.168.25.31:9090/js/artoolkit.three.js"></script>
+<script async src="https://art3-propaganda.github.io/arweb/nft/build/artoolkit.min.js"></script>
+<script async src="https://art3-propaganda.github.io/arweb/nft/js/third_party/three.js/three.min.js"></script>
+<script async src="https://art3-propaganda.github.io/arweb/nft/js/artoolkit.three.js"></script>
 
 <script>
 
